Add uv package manager integration and improve Python setup
- Replace pip with uv for faster, more reliable dependency management
- Add pyproject.toml for modern Python packaging
- Update Dockerfiles to use uv instead of pip
- Add setup script for uv installation
- Update README with uv installation instructions
- Create proper virtual environments in containers
- Remove python3-pip from Docker dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
   python-server:
     build: .
     container_name: python-server
-    command: python3 /app/converter/server/mt4_server.py
+    command: python /app/converter/server/mt4_server.py
     restart: unless-stopped
     ports:
       - "9091:9090"  # Alternative port for Python server
