--- a/Dockerfile.secure
+++ b/Dockerfile.secure
@@ -25,7 +25,6 @@ RUN apt-get update && apt-get install -y \
     curl \
     vim \
     python3 \
-    python3-pip \
     python3-dev \
     git \
     build-essential \
@@ -73,9 +72,24 @@ RUN ln -s /usr/share/novnc/vnc.html /usr/share/novnc/index.html \
 WORKDIR /app/converter
 COPY --chown=appuser:appuser . .
 
+# Install uv package manager as root
+USER root
+RUN curl -LsSf https://astral.sh/uv/install.sh | INSTALLER_NO_MODIFY_PATH=1 sh -s -- --to /usr/local/bin
+
+# Copy project files for dependency installation
+COPY --chown=appuser:appuser pyproject.toml /app/converter/
+COPY --chown=appuser:appuser src /app/converter/src/
+
 # Install Python dependencies as appuser
 USER appuser
-RUN pip3 install --user --no-cache-dir -r requirements.txt || true
+RUN cd /app/converter && \
+    /usr/local/bin/uv venv .venv && \
+    . .venv/bin/activate && \
+    /usr/local/bin/uv pip install -e .
+
+# Set Python environment
+ENV PATH="/app/converter/.venv/bin:$PATH"
+ENV VIRTUAL_ENV=/app/converter/.venv
 
 # Copy configuration files
 COPY --chown=appuser:appuser startup.sh /app/
