Fix line endings in docker-compose.safe.yml

--- a/docker-compose.safe.yml
+++ b/docker-compose.safe.yml
@@ -130,7 +130,7 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: ${PWD}/mt4-wine-data
+      device: /home/developer/mql-python-converter/mt4-wine-data
 
 networks:
   mt4-network:
